KRecentDocuments: Improve indentation in recentlyused.xbel

BUG: 456046